--- a/twitterlayout-adv.html
+++ b/twitterlayout-adv.html
@@ -174,7 +174,7 @@
      <h3>Messages</h3> 
     </div> 
     <div id="logoarea"> 
-     <img src="/storage/emulated/0/Download/twitter-logo-png-5860.png"> 
+     <img src="logo.png"> 
     </div> 
    </div> 
    <div id="darea"> 
